--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "typecheck": "nuxt typecheck",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "test": "vitest run",
+    "test:watch": "vitest dev"
   },
   "dependencies": {
     "@nuxt/eslint": "1.3.0",
@@ -25,14 +30,35 @@
     "fuzzysort": "^3.1.0",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
+    "vitest": "^3.1.1",
     "vue": "latest",
+    "vue-tsc": "^2.2.8",
     "vue-virtual-scroller": "2.0.0-beta.8"
   },
   "packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971",
   "devDependencies": {
+    "@iconify-json/ph": "^1.2.2",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.4",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "supportedArchitectures": {
+      "os": [
+        "win32",
+        "darwin",
+        "current"
+      ],
+      "cpu": [
+        "x64",
+        "arm64"
+      ]
+    },
+    "overrides": {
+      "sharp": "0.33.4"
+    }
   }
 }
